Temporarily disable the failing traffic annotation validation

Until the issue can be investigated. This affected several unrelated tests.

Bug: 826744
Change-Id: Ie955d68a72e7843b728c3d8172270958b893d3e4
Reviewed-on: https://chromium-review.googlesource.com/984355
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546615}
Former-commit-id: abbbd7058b0944fec94a0f55dd877aff7d189aff